--- a/templates/base.html
+++ b/templates/base.html
@@ -24,8 +24,13 @@
 
 <body>
     {% include 'includes/header.html' %}
-    <h1>Test</h1>
 
+    <main>
+        {% block content %}
+        {% endblock %}
+    </main>
+
+    {% include 'includes/footer.html' %}
 </body>
 
 </html>
