Add recipe model and fix account pages

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -69,3 +69,17 @@ footer {
     height: 2rem;
     margin: 1rem;
 }
+
+.active {
+    border-bottom: 2px solid var(--blue);
+    font-weight: 500;
+}
+
+/* Form */
+
+.form {
+    width: 100%;
+    margin: 3% auto;
+    box-shadow: var(--small-box-shadow);
+    border-radius: 5px;
+}
