--- a/templates/includes/header.html
+++ b/templates/includes/header.html
@@ -1,6 +1,7 @@
 {% load static %}
 
 <header>
+    {% with request.resolver_match.url_name as url_name %}
     <nav class="navbar navbar-expand-lg bg-light">
         <div class="container-fluid">
             <!--Logo-->
@@ -13,11 +14,23 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav me-auto mb-2">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="{% url 'home' %}">Home</a>
+                        <a class="nav-link {% if url_name == 'home' %}active{% endif %}" aria-current="page" href="{% url 'home' %}">Home</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Create Recipes</a>
                     </li>
+                    {% if request.user.is_authenticated %}
+                    <li class="nav-item">
+                        <a class="nav-link {% if url_name == 'accounts_logout' %}active{% endif %}" href="/accounts/logout/">Logout</a>
+                    </li>
+                    {% else %}
+                    <li class="nav-item">
+                        <a class="nav-link {% if url_name == 'accounts_signup' %}active{% endif %}" href="/accounts/signup/">Register</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link {% if url_name == 'accounts_login' %}active{% endif %}" href="/accounts/login/">Login</a>
+                    </li>
+                    {% endif %}
                 </ul>
                 <!--Search bar Form-->
                 <form class="d-flex" role="search">
@@ -27,4 +40,5 @@
             </div>
         </div>
     </nav>
+    {% endwith %}
 </header>
