--- a/static/css/style.css
+++ b/static/css/style.css
@@ -83,3 +83,19 @@ footer {
     box-shadow: var(--small-box-shadow);
     border-radius: 5px;
 }
+
+/*Recipes*/
+
+.card {
+    height: 90%;
+    margin-top: 1rem;
+}
+
+.recipes {
+    text-decoration: none;
+    color: var(--black);
+}
+
+.recipes:hover {
+    cursor: pointer;
+}
