--- a/templates/includes/header.html
+++ b/templates/includes/header.html
@@ -17,8 +17,11 @@
                         <a class="nav-link {% if url_name == 'home' %}active{% endif %}" aria-current="page" href="{% url 'home' %}">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Create Recipes</a>
+                        <a class="nav-link {% if url_name == 'new_recipe' %}active{% endif %}" href="{% url 'new_recipe' %}">Create Recipes</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link {% if url_name == 'recipe_list' %}active{% endif %}" href="{% url 'recipe_list' %}">Recipes</a>
+                      </li>
                     {% if request.user.is_authenticated %}
                     <li class="nav-item">
                         <a class="nav-link {% if url_name == 'accounts_logout' %}active{% endif %}" href="/accounts/logout/">Logout</a>
