--- a/templates/includes/header.html
+++ b/templates/includes/header.html
@@ -36,8 +36,8 @@
                     {% endif %}
                 </ul>
                 <!--Search bar Form-->
-                <form class="d-flex" role="search">
-                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                <form class="d-flex" role="search" method="GET" action="{% url 'recipe_list' %}">
+                    <input class="form-control me-2" name="q" type="search" placeholder="Search" aria-label="Search">
                     <button class="btn btn-outline-primary" type="submit">Search</button>
                 </form>
             </div>
