--- a/templates/includes/header.html
+++ b/templates/includes/header.html
@@ -2,7 +2,7 @@
 
 <header>
     {% with request.resolver_match.url_name as url_name %}
-    <nav class="navbar navbar-expand-lg bg-light">
+    <nav class="navbar navbar-expand-lg bg-dark">
         <div class="container-fluid">
             <!--Logo-->
             <a class="navbar-brand" href="#">Logo</a>
@@ -20,7 +20,7 @@
                         <a class="nav-link {% if url_name == 'new_recipe' %}active{% endif %}" href="{% url 'new_recipe' %}">Create Recipes</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link {% if url_name == 'recipe_list' %}active{% endif %}" href="{% url 'recipe_list' %}">Recipes</a>
+                        <a class="nav-link {% if url_name == 'recipe_list' %}active{% endif %}" href="{% url 'recipe_list' %}">Browse Recipes</a>
                       </li>
                     {% if request.user.is_authenticated %}
                     <li class="nav-item">
@@ -35,6 +35,9 @@
                     </li>
                     {% endif %}
                 </ul>
+                <div>
+                    
+                </div>
                 <!--Search bar Form-->
                 <form class="d-flex" role="search" method="GET" action="{% url 'recipe_list' %}">
                     <input class="form-control me-2" name="q" type="search" placeholder="Search" aria-label="Search">
