--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,12 +1,11 @@
-/* IMPORT FONTS HERE! */
-/* ALSO CHANGE ROOT FONTS */
+@import url('https://fonts.googleapis.com/css2?family=EB+Garamond:wght@400;500;600&family=Roboto:wght@400;500&display=swap');
 
 :root {
-    /* Fonts */
+    /** Fonts */
     --title: 'EB Garamond', serif;
     --main-font: 'Roboto', serif;
 
-    /* colors */
+    /* Colours */
     --background: #3f006a0f;
     --blue: #0d6efd;
     --black: #000;
@@ -15,10 +14,10 @@
     --orange: #ffbf50;
 
     /* Utils */
-    --small-box-shadow: 1px -px 7px 0 #00000061;
-    --boder: 1px solid #00000030;
-
+    --smal-box-shadow: 1px -1px 7px 0 #00000061;
+    --border: 1px solid #00000030;
 }
+
 html, body {
     height: 100%;
 }
@@ -29,40 +28,16 @@ body {
     font-family: var(--main-font);
 }
 
-h1,h2,h3,h4,h5,h6 {
+h1, h2, h3, h4, h5, h6 {
     font-family: var(--title);
 }
 
 main {
-    flex: 10 auto;
+    flex: 1 0 auto;
     background-color: var(--white);
 }
 
-
-/* Header */
-.navbar {
-    background-color: var(--off-white);
-    box-shadow: var(--small-box-shadow);
-}
-
-a.nav-link {
-    color: var(--off-white);
-}
-
-a.nav-link:hover {
-    color: var(--off-white);
-}
-
-.navbar-nav .nav-link.active, .navbar-nav .show>.nav-link {
-    color: var(--off-white);
-}
-
-img.logo {
-    width: 10.75rem;
-}
-
 /* Footer */
-
 footer {
     flex-shrink: 0;
     background-color: var(--off-white);
@@ -70,7 +45,7 @@ footer {
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    border-top: var(--boder);
+    border-top: var(--border);
 }
 
 .social-icon {
@@ -78,8 +53,22 @@ footer {
     margin: 1rem;
 }
 
+/* Header */
+.navbar {
+    background-color: var(--off-white);
+    box-shadow: var(--smal-box-shadow);
+}
+
+a.nav-link {
+    color: var(--black);
+}
+
+img.logo {
+    width: 18.75rem;
+}
+
 .active {
-    border-bottom: 2px solid var(--off-white);
+    border-bottom: 2px solid var(--blue);
     font-weight: 500;
 }
 
@@ -88,7 +77,7 @@ footer {
 .form {
     width: 100%;
     margin: 3% auto;
-    box-shadow: var(--small-box-shadow);
+    box-shadow: var(--smal-box-shadow);
     border-radius: 5px;
 }
 
@@ -167,6 +156,63 @@ a.img-container:hover {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+}
+
+/* Profiles */
+
+.profile-img {
+    width: 280px;
+    margin: 0 auto;
+}
+
+.profile-img img {
+    border-radius: 8px;
+    width: 100%;
+}
+
+.profile {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.info {
+    width: 100%;
+    text-align: center;
+}
+
+.profile-recipes {
+    width: 100%;
+}
+
+/* Meal Planner */
+
+.accordion-body {
+    display: flex;
+    flex-direction: column;
+}
+
+.accordion-button {
+    font-size: 1.5rem;
+    font-weight: 500;
+    margin: 0;
+}
+
+.meals {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+h3 > a {
+    text-align: center;
+    text-decoration: none;
+    font-weight: 700;
+}
+
+.thumb img {
+    width: 100%;
 }
 
 @media screen and (min-width:40em){
