--- a/templates/base.html
+++ b/templates/base.html
@@ -27,11 +27,15 @@
 
     <main>
         {% block content %}
-        
+
         {% endblock %}
     </main>
 
     {% include 'includes/footer.html' %}
+
+    {% block extra_js %}
+
+    {% endblock %}
 </body>
 
 </html>
