--- a/templates/includes/header.html
+++ b/templates/includes/header.html
@@ -2,9 +2,9 @@
 
 <header>
     {% with request.resolver_match.url_name as url_name %}
-    <nav class="navbar navbar-expand-lg bg-dark">
+    <nav class="navbar navbar-expand-lg bg-light">
         <div class="container-fluid">
-            <!--Logo-->
+            <!-- Logo -->
             <a class="navbar-brand" href="#">Logo</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -14,29 +14,39 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav me-auto mb-2">
                     <li class="nav-item">
-                        <a class="nav-link {% if url_name == 'home' %}active{% endif %}" aria-current="page" href="{% url 'home' %}">Home</a>
+                        <a class="nav-link {% if url_name == 'home' %}active{% endif %}" aria-current="page"
+                            href="{% url 'home' %}">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link {% if url_name == 'new_recipe' %}active{% endif %}" href="{% url 'new_recipe' %}">Create Recipes</a>
+                        <a class="nav-link {% if url_name == 'new_recipe' %}active{% endif %}"
+                            href="{% url 'new_recipe' %}">Create Recipes</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link {% if url_name == 'recipe_list' %}active{% endif %}" href="{% url 'recipe_list' %}">Browse Recipes</a>
-                      </li>
+                        <a class="nav-link {% if url_name == 'recipe_list' %}active{% endif %}"
+                            href="{% url 'recipe_list' %}">Browse Recipes</a>
+                    </li>
                     {% if request.user.is_authenticated %}
                     <li class="nav-item">
-                        <a class="nav-link {% if url_name == 'accounts_logout' %}active{% endif %}" href="/accounts/logout/">Logout</a>
+                        <a class="nav-link {% if url_name == 'profile' %}active{% endif %}"
+                            href="{% url 'profile' request.user.id %}">Profile</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link {% if url_name == 'accounts_logout' %}active{% endif %}"
+                            href="/accounts/logout/">Logout</a>
                     </li>
                     {% else %}
                     <li class="nav-item">
-                        <a class="nav-link {% if url_name == 'accounts_signup' %}active{% endif %}" href="/accounts/signup/">Register</a>
+                        <a class="nav-link {% if url_name == 'accounts_signup' %}active{% endif %}"
+                            href="/accounts/signup/">Register</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link {% if url_name == 'accounts_login' %}active{% endif %}" href="/accounts/login/">Login</a>
+                        <a class="nav-link {% if url_name == 'accounts_login' %}active{% endif %}"
+                            href="/accounts/login/">Login</a>
                     </li>
                     {% endif %}
                 </ul>
                 <div>
-                    
+
                 </div>
                 <!--Search bar Form-->
                 <form class="d-flex" role="search" method="GET" action="{% url 'recipe_list' %}">
