--- a/static/css/style.css
+++ b/static/css/style.css
@@ -14,11 +14,13 @@
     --orange: #ffbf50;
 
     /* Utils */
-    --smal-box-shadow: 1px -1px 7px 0 #00000061;
+    --smal-box-shadow: 5px -4px 10px 0 #000;
+    --navbar-box-shadow: 5px -4px 10px 0 #000;
     --border: 1px solid #00000030;
 }
 
-html, body {
+html,
+body {
     height: 100%;
 }
 
@@ -28,13 +30,19 @@ body {
     font-family: var(--main-font);
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
     font-family: var(--title);
 }
 
 main {
     flex: 1 0 auto;
-    background-color: var(--white);
+    background: rgb(255, 255, 255);
+    background: linear-gradient(0deg, rgba(255, 255, 255, 0) 0%, rgba(255, 232, 111, 0.6026785714285714) 100%);
 }
 
 /* Footer */
@@ -54,9 +62,12 @@ footer {
 }
 
 /* Header */
+#navbar-top {
+    box-shadow: var(--navbar-box-shadow);
+}
+
 .navbar {
     background-color: var(--off-white);
-    box-shadow: var(--smal-box-shadow);
 }
 
 a.nav-link {
@@ -108,7 +119,9 @@ img.logo {
     flex-direction: column;
 }
 
-.ingredients, .instructions, .recipe-detail {
+.ingredients,
+.instructions,
+.recipe-detail {
     width: 100%;
 }
 
@@ -205,7 +218,7 @@ a.img-container:hover {
     align-items: center;
 }
 
-h3 > a {
+h3>a {
     text-align: center;
     text-decoration: none;
     font-weight: 700;
@@ -215,7 +228,7 @@ h3 > a {
     width: 100%;
 }
 
-@media screen and (min-width:40em){
+@media screen and (min-width:40em) {
     .form {
         width: 50%;
     }
@@ -234,7 +247,7 @@ h3 > a {
     .main-title {
         width: 50%;
     }
-    
+
     .recipe-info {
         flex-direction: row;
         border: 1px solid var(--black);
