--- a/static/css/style.css
+++ b/static/css/style.css
@@ -19,6 +19,13 @@
     --border: 1px solid #00000030;
 }
 
+* {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+    text-decoration: none;
+}
+
 html,
 body {
     height: 100%;
