--- a/static/css/style.css
+++ b/static/css/style.css
@@ -15,7 +15,7 @@
 
     /* Utils */
     --smal-box-shadow: 5px -4px 10px 0 #000;
-    --navbar-box-shadow: 5px -4px 10px 0 #000;
+    --navbar-box-shadow: 8px -2px 8px 0 #000;
     --border: 1px solid #00000030;
 }
 
@@ -35,6 +35,9 @@ body {
     display: flex;
     flex-direction: column;
     font-family: var(--main-font);
+    background-image: url(/static/images/bg-image.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 h1,
@@ -71,6 +74,7 @@ footer {
 /* Header */
 #navbar-top {
     box-shadow: var(--navbar-box-shadow);
+    z-index: 1;
 }
 
 .navbar {
