--- a/templates/includes/header.html
+++ b/templates/includes/header.html
@@ -5,11 +5,11 @@
     <nav id="navbar-top" class="navbar navbar-expand-lg bg-light">
         <div class="container-fluid">
             <!-- Logo -->
-            <a class="navbar-brand" href="#">Logo</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
+            <a class="navbar-brand" href="{% url 'new_recipe' %}">
+                <div class="logo-container">
+                    <img src="/static/images/rr-logo-white-transp.png" alt="Recipe Republic Logo" class="logo">
+                </div>
+            </a>
             <!--Nav bar items-->
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto mb-2">
