--- a/static/css/style.css
+++ b/static/css/style.css
@@ -24,6 +24,7 @@
     padding: 0;
     list-style: none;
     text-decoration: none;
+    box-sizing: border-box;
 }
 
 html,
@@ -38,8 +39,6 @@ body {
     background-image: url(/static/images/bg-image.jpg);
     background-repeat: no-repeat;
     background-size: cover;
-    position: relative; /* Add this line */
-    z-index: 0; /* Add this line */
 } 
 
 h1,
@@ -110,8 +109,8 @@ a.nav-link {
 
 .logo {
     width: 250px;
-    height: auto; /* Adjust height as needed */
-    max-width: 100%; /* Ensure the image doesn't exceed its container */
+    height: auto;
+    max-width: 100%;
 }
 
 .active {
@@ -271,6 +270,138 @@ h3>a {
 .thumb img {
     width: 100%;
 }
+
+/*Cards*/
+
+.card-container {
+    margin-right: auto;
+    margin-left: auto;
+}
+
+.cards {
+    align-items: center;
+    align-content: center;
+    align-self: center;
+    width: 100%;
+    display: flex;
+    display: -webkit-flex;
+    justify-content: center;
+    -webkit-justify-content: center;
+    max-width: 820px;
+    background-color: rgba(0, 0, 0, 0.6);
+    padding: 10px 0 20px 10px;
+}
+
+.card__like {
+    width: 18px;
+}
+
+
+.card__img {
+  visibility: hidden;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    width: 100%;
+    height: 235px;
+  border-top-left-radius: 12px;
+border-top-right-radius: 12px;
+  
+}
+
+.card__info-hover {
+    position: absolute;
+    padding: 16px;
+  width: 100%;
+  opacity: 0;
+  top: 0;
+}
+
+.card__img--hover {
+  transition: 0.2s all ease-out;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    width: 100%;
+  position: absolute;
+    height: 235px;
+  border-top-left-radius: 12px;
+border-top-right-radius: 12px;
+top: 0;
+  
+}
+.card {
+  margin-right: 25px;
+  transition: all .4s cubic-bezier(0.175, 0.885, 0, 1);
+  background-color: #fff;
+    width: 33.3%;
+  position: relative;
+  border-radius: 12px;
+  overflow: hidden;
+  box-shadow: 0px 13px 10px -7px rgba(0, 0, 0,0.1);
+}
+
+.cards h3 {
+    color: var(--off-white)
+}
+.card:hover {
+  box-shadow: 0px 30px 18px -8px rgba(0, 0, 0,0.1);
+    transform: scale(1.10, 1.10);
+}
+
+.card__info {
+z-index: 2;
+  background-color: #fff;
+  border-bottom-left-radius: 12px;
+border-bottom-right-radius: 12px;
+   padding: 16px 24px 24px 24px;
+}
+
+.card__info h3 {
+    color: var(--black)
+}
+
+.card__category {
+    font-family: 'Raleway', sans-serif;
+    text-transform: uppercase;
+    font-size: 13px;
+    letter-spacing: 2px;
+    font-weight: 500;
+  color: #868686;
+}
+
+.card__title {
+    margin-top: 5px;
+    margin-bottom: 10px;
+    font-family: 'Roboto Slab', serif;
+}
+
+.card__by {
+    font-size: 12px;
+    font-family: 'Raleway', sans-serif;
+    font-weight: 500;
+}
+
+.card__author {
+    font-weight: 600;
+    text-decoration: none;
+    color: #AD7D52;
+}
+
+.card:hover .card__img--hover {
+    height: 100%;
+    opacity: 0.3;
+}
+
+.card:hover .card__info {
+    background-color: transparent;
+    position: relative;
+}
+
+.card:hover .card__info-hover {
+    opacity: 1;
+}
+
 
 @media screen and (min-width:40em) {
     .form {
