--- a/static/css/style.css
+++ b/static/css/style.css
@@ -39,6 +39,8 @@ body {
     background-image: url(/static/images/bg-image.jpg);
     background-repeat: no-repeat;
     background-size: cover;
+    background-attachment: fixed;
+    background-color: white;
 } 
 
 h1,
