--- a/static/css/style.css
+++ b/static/css/style.css
@@ -137,6 +137,14 @@ a.nav-link {
     border-radius: 5px;
 }
 
+form label {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 18px;
+  }
+  
+
 /* Recipes */
 
 .card {
@@ -468,4 +476,107 @@ border-bottom-right-radius: 12px;
     .profile-recipes a {
         text-decoration: none;
     }
+}
+
+@import url('https://fonts.googleapis.com/css?family=Roboto:300,400,700');
+
+$gradient-from: #004e92;
+$gradient-to: #000428;
+$font-family: "Roboto", Arial, sans-serif;
+
+
+@keyframes slideInRight {
+  from {
+    -webkit-transform: translate3d(100%, 0, 0);
+    transform: translate3d(100%, 0, 0);
+    opacity: 0;
+  }
+
+  to {
+    -webkit-transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0);
+    opacity: 1;
+  }
+}
+
+
+body {
+  background: $gradient-to;
+  background: -webkit-linear-gradient(to right, $gradient-from, $gradient-to);
+  background: linear-gradient(to right, $gradient-from, $gradient-to);
+  font-family: $font-family;
+  text-align: center;
+}
+
+.form {
+  background-color: rgba(255,255,255,.1);
+  border-radius: 1rem;
+  display: inline-block;
+  margin: 2rem auto;
+  padding: 2rem;
+  text-align: left;
+  .form-header {
+    margin-bottom: 2rem;
+    .logo {
+      max-width: 100%;
+      width: 150px;
+    }
+  }
+  .label-slideInRight {
+    color: #fff;
+    margin-top: -2rem;
+    margin-left: -7rem;
+    opacity: 0;
+    position: absolute;
+  }
+  input[type="text"],
+  input[type="password"] {
+    background-color: rgba(255,255,255,.1);
+    border: 0;
+    border-radius: .4rem;
+    color: #fff;
+    font-size: 18px;
+    padding: 1rem 2rem;
+    &::placeholder {
+      color: rgba(255,255,255,.8);
+    }
+    &:focus::placeholder {
+      color: transparent;
+    }
+  }
+  .input-slideInRight:focus+label {
+    animation-name: slideInRight;
+    animation-delay: 0;
+    animation-duration: 2s;
+    animation-fill-mode: forwards;
+    animation-iteration-count: 1;
+  }
+  .form-body {
+    .form-group {
+      margin: .1rem 0 0 0;
+    }
+    & div:nth-child(1) input {
+      border-bottom-left-radius: 0;
+      border-bottom-right-radius: 0;
+    }
+    & div:nth-last-child(1) input {
+      border-top-left-radius: 0;
+      border-top-right-radius: 0;
+    }
+  }
+  .form-footer {
+    input[type="submit"] {
+      background: #56ab2f;
+      background: -webkit-linear-gradient(to right, #a8e063, #56ab2f);
+      background: linear-gradient(to right, #a8e063, #56ab2f);
+      border: 0;
+      border-radius: 2rem;
+      color: #fff;
+      display: block;
+      font-size: 1.25rem;
+      margin: 2rem auto 0 auto;
+      padding: 1rem 3rem
+    }
+  }
+  
 }
