--- a/recipe/templates/recipe/recipe_veiw.html
+++ b/recipe/templates/recipe/recipe_veiw.html
@@ -6,7 +6,7 @@
 <div class="container">
     <div class="recipe-info mt-3 p-1">
         <div class="recipe-img">
-            <img src="{{ recipe.image.url }}" alt="{{recipe.image_alt}}" clas="recipe-pic">
+            <img src="{{ recipe.image.url }}" alt="Image of {{ recipe.title }}" clas="recipe-pic">
         </div>
         <div class="recipe-detail">
             <h1 class="text-center">
