--- a/recipe/templates/recipe/recipe_list.html
+++ b/recipe/templates/recipe/recipe_list.html
@@ -10,7 +10,7 @@
     {% for recipe in recipes %}
     <a href="{% url 'recipe_view' recipe.id %}" class="recipes" aria-label="Click to view {{ recipe.title }}">
         <div class="card m-3" style="width: 18rem;">
-            <img src="{{ recipe.image.url }}" class="card-img-top" alt="{{ recipe.image_alt }}">
+            <img src="{{ recipe.image.url }}" class="card-img-top" alt="Image of {{ recipe.title }}">
             <div class="card-body">
                 <h2 class="card-title">{{ recipe.title }}</h2>
                 <p class="card-text">{{ recipe.description|truncatechars:100 }}</p>
