--- a/static/css/style.css
+++ b/static/css/style.css
@@ -12,6 +12,7 @@
     --off-white: #f6f6f6;
     --white: #fff;
     --orange: #ffbf50;
+    --yellowish: #ffe86f;
 
     /* Utils */
     --smal-box-shadow: 5px -4px 10px 0 #000;
@@ -41,7 +42,7 @@ body {
     background-size: cover;
     background-attachment: fixed;
     background-color: white;
-} 
+}
 
 h1,
 h2,
@@ -135,6 +136,9 @@ a.nav-link {
     margin: 3% auto;
     box-shadow: var(--smal-box-shadow);
     border-radius: 5px;
+    background-color: rgba(0, 0, 0, 0.6);
+    text-align: center;
+    color: var(--yellowish)
 }
 
 form label {
@@ -142,8 +146,8 @@ form label {
     align-items: center;
     justify-content: center;
     font-size: 18px;
-  }
-  
+}
+
 
 /* Recipes */
 
@@ -286,13 +290,13 @@ h3>a {
 .container {
     margin-right: auto;
     margin-left: auto;
-    
+
 }
 
 .card-title-container {
-background-color: rgba(0, 0, 0, 0.6);
-text-align: center;
-color: var(--off-white)
+    background-color: rgba(0, 0, 0, 0.6);
+    text-align: center;
+    color: var(--off-white)
 }
 
 .cards {
@@ -314,63 +318,65 @@ color: var(--off-white)
 
 
 .card__img {
-  visibility: hidden;
+    visibility: hidden;
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
     width: 100%;
     height: 235px;
-  border-top-left-radius: 12px;
-border-top-right-radius: 12px;
-  
+    border-top-left-radius: 12px;
+    border-top-right-radius: 12px;
+
 }
 
 .card__info-hover {
     position: absolute;
     padding: 16px;
-  width: 100%;
-  opacity: 0;
-  top: 0;
+    width: 100%;
+    opacity: 0;
+    top: 0;
 }
 
 .card__img--hover {
-  transition: 0.2s all ease-out;
+    transition: 0.2s all ease-out;
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
     width: 100%;
-  position: absolute;
+    position: absolute;
     height: 235px;
-  border-top-left-radius: 12px;
-border-top-right-radius: 12px;
-top: 0;
-  
+    border-top-left-radius: 12px;
+    border-top-right-radius: 12px;
+    top: 0;
+
 }
+
 .card {
-  margin-right: 25px;
-  transition: all .4s cubic-bezier(0.175, 0.885, 0, 1);
-  background-color: #fff;
+    margin-right: 25px;
+    transition: all .4s cubic-bezier(0.175, 0.885, 0, 1);
+    background-color: #fff;
     width: 33.3%;
-  position: relative;
-  border-radius: 12px;
-  overflow: hidden;
-  box-shadow: 0px 13px 10px -7px rgba(0, 0, 0,0.1);
+    position: relative;
+    border-radius: 12px;
+    overflow: hidden;
+    box-shadow: 0px 13px 10px -7px rgba(0, 0, 0, 0.1);
 }
 
 .cards h3 {
     color: var(--off-white)
 }
+
 .card:hover {
-  box-shadow: 0px 30px 18px -8px rgba(0, 0, 0,0.1);
+    box-shadow: 0px 30px 18px -8px rgba(0, 0, 0, 0.1);
     transform: scale(1.10, 1.10);
 }
 
 .card__info {
-z-index: 2;
-  background-color: #fff;
-  border-bottom-left-radius: 12px;
-border-bottom-right-radius: 12px;
-   padding: 16px 24px 24px 24px;
+    z-index: 2;
+    background-color: #fff;
+    border-bottom-left-radius: 12px;
+    border-bottom-right-radius: 12px;
+    padding: 16px 24px 24px 24px;
 }
 
 .card__info h3 {
@@ -383,7 +389,7 @@ border-bottom-right-radius: 12px;
     font-size: 13px;
     letter-spacing: 2px;
     font-weight: 500;
-  color: #868686;
+    color: #868686;
 }
 
 .card__title {
@@ -483,4 +489,3 @@ border-bottom-right-radius: 12px;
         text-decoration: none;
     }
 }
-
