--- a/recipe/templates/recipe/recipe_list.html
+++ b/recipe/templates/recipe/recipe_list.html
@@ -4,8 +4,15 @@
 
 {% block content %}
 <h1 class="text-center p-2 d-block">
-    Latest Uploads:
+    Browse Recipes:
 </h1>
+<div class="container d-flex flex-row flex-wrap justify-content-center">
+    <div class="btn-group" role="group" aria-label="Recipe categories">
+        <a href="{% url 'recipe_list' %}" class="btn {% if category == '' %}active{% endif %}">All</a>
+        <a href="{% url 'recipe_list' %}?category=food" class="btn {% if category == 'food' %}active{% endif %}">Food</a>
+        <a href="{% url 'recipe_list' %}?category=drink" class="btn {% if category == 'drink' %}active{% endif %}">Drinks</a>
+    </div>
+</div>
 <div class="container d-flex flex-row flex-wrap justify-content-center">
     {% for recipe in recipes %}
     <a href="{% url 'recipe_view' recipe.id %}" class="recipes" aria-label="Click to view {{ recipe.title }}">
