Add vegan choice in recipe model

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -416,6 +416,10 @@ a.img-container:hover {
     opacity: 1;
 }
 
+.card-desc {
+    color:var(--black)
+}
+
 
 @media screen and (min-width:40em) {
     .form {
