--- a/recipe/templates/recipe/recipe_list.html
+++ b/recipe/templates/recipe/recipe_list.html
@@ -1,32 +1,50 @@
-{% extends "base.html" %} 
+{% extends "base.html" %}
 
 {% block title %}Recipes{% endblock %}
 
 {% block content %}
 <section class="container browse-cont">
-<h1 class="text-center p-2 d-block">
-    Browse Recipes:
-</h1>
-<p>Filter list by:</p>
-<div class="container d-flex flex-row flex-wrap justify-content-center">
-    <div class="btn-group" role="group" aria-label="Recipe categories">
-        <a href="{% url 'recipe_list' %}" class="btn {% if category == '' %}active{% endif %}">All</a>
-        <a href="{% url 'recipe_list' %}?category=food" class="btn {% if category == 'food' %}active{% endif %}">Food</a>
-        <a href="{% url 'recipe_list' %}?category=drink" class="btn {% if category == 'drink' %}active{% endif %}">Drinks</a>
-    </div>
-</div>
-<div class="container d-flex flex-row flex-wrap justify-content-center">
-    {% for recipe in recipes %}
-    <a href="{% url 'recipe_view' recipe.id %}" class="recipes" aria-label="Click to view {{ recipe.title }}">
-        <div class="card m-3" style="width: 18rem;">
-            <img src="{{ recipe.image.url }}" class="card-img-top" alt="Image of {{ recipe.title }}">
-            <div class="card-body">
-                <h2 class="card-title">{{ recipe.title }}</h2>
-                <p class="card-text">{{ recipe.description|truncatechars:100 }}</p>
-            </div>
+    <h1 class="text-center p-2 d-block">
+        Browse Recipes:
+    </h1>
+    <p>Filter list by:</p>
+    <div class="container d-flex flex-row flex-wrap justify-content-center">
+        <div class="btn-group" role="group" aria-label="Recipe categories">
+            <a href="{% url 'recipe_list' %}" class="btn {% if category == '' %}active{% endif %}">All</a>
+            <a href="{% url 'recipe_list' %}?category=food"
+                class="btn {% if category == 'food' %}active{% endif %}">Food</a>
+            <a href="{% url 'recipe_list' %}?category=drink"
+                class="btn {% if category == 'drink' %}active{% endif %}">Drinks</a>
         </div>
-    </a>
-    {% endfor %}
-</div>
-</section>
-{% endblock %}
+    </div>
+    <div class="container">
+        <section class="cards d-flex flex-wrap">
+            {% for recipe in recipes %}
+            <article class="card card--1 col-md-4">
+                <div class="card__info-hover">
+                    <svg class="card__like" viewBox="0 0 24 24">
+                        <path fill="#000000"
+                            d="M12.1,18.55L12,18.65L11.89,18.55C7.14,14.24 4,11.39 4,8.5C4,6.5 5.5,5 7.5,5C9.04,5 10.54,6 11.07,7.36H12.93C13.46,6 14.96,5 16.5,5C18.5,5 20,6.5 20,8.5C20,11.39 16.86,14.24 12.1,18.55M16.5,3C14.76,3 13.09,3.81 12,5.08C10.91,3.81 9.24,3 7.5,3C4.42,3 2,5.41 2,8.5C2,12.27 5.4,15.36 10.55,20.03L12,21.35L13.45,20.03C18.6,15.36 22,12.27 22,8.5C22,5.41 19.58,3 16.5,3Z" />
+                    </svg>
+                    <p class="card-desc">{{ recipe.description }}</p>
+                </div>
+                <div>
+                    <img src="{{ recipe.image.url }}" alt="Image of {{ recipe.title }}" style="width: 100%"
+                        class="card__img">
+                </div>
+                <a href="{% url 'recipe_view' recipe.id %}" class="card_link">
+                    <div class="card__img--hover">
+                        <img src="{{ recipe.image.url }}" alt="Image of {{ recipe.title }}" style="width: 100%">
+                    </div>
+                </a>
+                <div class="card__info">
+                    <span class="card__category">{{ recipe.category }}</span>
+                    <h3 class="card__title">{{ recipe.title }}</h3>
+                    <span class="card__by">by <a href="#" class="card__author"
+                            title="author">{{ recipe.user }}</a></span>
+                </div>
+            </article>
+            {% endfor %}
+        </section>
+    </div>
+    {% endblock %}
