--- a/recipe/templates/recipe/recipe_view.html
+++ b/recipe/templates/recipe/recipe_view.html
@@ -1,26 +1,24 @@
 {% extends "base.html" %}
 
-{% block title %}{{recipe.title}}{% endblock %}
+{% block title %}{{ recipe.title }}{% endblock %}
 
 {% block content %}
 <div class="container">
     <div class="recipe-info mt-3 p-1">
         <div class="recipe-img">
-            <img src="{{ recipe.image.url }}" alt="Image of {{ recipe.title }}" clas="recipe-pic">
+            <img src="{{ recipe.image.url }}" alt="Image of {{ recipe.title }}" class="recipe-pic">
         </div>
         <div class="recipe-detail">
-            <h1 class="text-center">
-                {{ recipe.title }}
-            </h1>
-            <p class="text-center">Posted by {{recipe.user}} on {{recipe.post_date}}</p>
+            <h1 class="text-center">{{ recipe.title }}</h1>
+            <p class="text-center">Posted by {{ recipe.user }} on {{ recipe.post_date }}</p>
             <hr>
             <p><strong>{{ recipe.description }}</strong></p>
             <p><strong>Category: </strong>{{ recipe.category|title }}</p>
 
             {% if request.user == recipe.user %}
             <div class="text-center">
-                <a href="{% url 'edit_recipe' recipe.id %}" class="btn btn-primary w-25">Edit</a>
-                <a href="{% url 'delete_recipe' recipe.id %}" class="btn btn-primary w-25">Delete</a>
+                <a href="{% url 'edit_recipe' recipe.pk %}" class="btn btn-primary w-25">Edit</a>
+                <a href="{% url 'delete_recipe' recipe.pk %}" class="btn btn-primary w-25">Delete</a>
             </div>
             {% endif %}
         </div>
