--- a/static/css/style.css
+++ b/static/css/style.css
@@ -154,6 +154,17 @@ form label {
 
 /* Recipes */
 
+.recipe-section {
+    margin-top: 15px box-shadow: var(--smal-box-shadow);
+    margin-left: 20%;
+    margin-right: 20%;
+    padding: 20px;
+    border-radius: 5px;
+    background-color: rgba(0, 0, 0, 0.6);
+    text-align: center;
+    color: var(--yellowish);
+}
+
 .card {
     height: 90%;
     margin-top: 1rem;
@@ -232,8 +243,7 @@ a.img-container:hover {
 }
 
 .browse-cont {
-    margin-top: 15px
-    box-shadow: var(--smal-box-shadow);
+    margin-top: 15px box-shadow: var(--smal-box-shadow);
     border-radius: 5px;
     background-color: rgba(0, 0, 0, 0.6);
     text-align: center;
@@ -417,7 +427,7 @@ a.img-container:hover {
 }
 
 .card-desc {
-    color:var(--black)
+    color: var(--black)
 }
 
 
@@ -443,7 +453,7 @@ a.img-container:hover {
 
     .recipe-info {
         flex-direction: row;
-        border: 1px solid var(--black);
+        border: 1px solid var(--yellowish);
     }
 
     .recipe-img {
