--- a/static/css/style.css
+++ b/static/css/style.css
@@ -316,13 +316,20 @@ a.img-container:hover {
   }
   
 
-.card__info-hover {
+  .card__info-hover {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-start; /* Adjusted alignment to flex-start */
     position: absolute;
-    padding: 16px;
-    width: 100%;
-    opacity: 0;
     top: 0;
-}
+    left: 0;
+    width: 100%;
+    height: 100%;
+    opacity: 0;
+    background-color: rgba(255, 255, 255, 0.9);
+    transition: opacity 0.2s ease-out;
+  }
 
 .card__img--hover {
     transition: 0.2s all ease-out;
@@ -335,8 +342,8 @@ a.img-container:hover {
     border-top-left-radius: 12px;
     border-top-right-radius: 12px;
     top: 0;
-
 }
+
 .cards h3 {
     color: var(--off-white)
 }
@@ -347,28 +354,43 @@ a.img-container:hover {
 }
 
 .card__info {
-    margin-top: 10px;
-  }
+    z-index: 2;
+    background-color: #fff;
+    border-bottom-left-radius: 12px;
+    border-bottom-right-radius: 12px;
+    padding: 16px 24px 24px 24px;
+    transition: background-color 0.2s ease-out;
+}
 
 .card__info h3 {
     color: var(--black)
 }
 
 .card__category {
-    font-size: 14px;
-  }
+    font-family: 'Raleway', sans-serif;
+    text-transform: uppercase;
+    font-size: 13px;
+    letter-spacing: 2px;
+    font-weight: 500;
+    color: #868686;
+}
   
   .card__title {
     margin-top: 5px;
+    text-align: center;
   }
 
-.main-title {
-    margin-bottom: 20px;
-  }
+  .card__title {
+    margin-top: 5px;
+    margin-bottom: 10px;
+    font-family: 'Roboto Slab', serif;
+}
 
   .card__by {
     font-size: 12px;
-  }
+    font-family: 'Raleway', sans-serif;
+    font-weight: 500;
+}
 
 .card__author {
     font-weight: 600;
@@ -390,9 +412,20 @@ a.img-container:hover {
     opacity: 1;
 }
 
-.card-desc {
-    color: var(--black)
+.card__like {
+    margin-top: 20px;
 }
+
+.card-desc {
+    color: var(--black);
+    text-align: center;
+}
+
+.card__info-hover p {
+    margin-top: 15px;
+    padding: 20px;
+    text-align: center;
+  }
 
 /* Profiles */
 
