--- a/static/css/style.css
+++ b/static/css/style.css
@@ -266,6 +266,19 @@ a.img-container:hover {
     border-bottom: 2px solid var(--yellowish);
 }
 
+/* Search Bar */
+.search-container {
+    margin: 20px 0;
+}
+
+.search-container .form-control {
+    flex: 1;
+}
+
+.search-container .btn {
+    margin-left: 10px;
+}
+
 /* Pagination */
 
 .pagination {
@@ -544,3 +557,70 @@ a.img-container:hover {
     }
 }
 
+
+/* Search bar */
+.flexbox {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  .search {
+    margin: 20px;
+  }
+  
+  .search > h3 {
+    font-weight: normal;
+  }
+  
+  .search > h1,
+  .search > h3 {
+    color: white;
+    margin-bottom: 15px;
+  }
+  
+  .search > div {
+    display: inline-block;
+    position: relative;
+  }
+  
+  .search > div:after {
+    content: "";
+    background: white;
+    width: 4px;
+    height: 20px;
+    position: absolute;
+    top: 40px;
+    right: 2px;
+    transform: rotate(135deg);
+  }
+  
+  .search > div > input {
+    color: white;
+    font-size: 16px;
+    background: transparent;
+    width: 25px;
+    height: 25px;
+    padding: 10px;
+    border: solid 3px white;
+    outline: none;
+    border-radius: 35px;
+    transition: width 0.5s;
+  }
+  
+  .search > div > input::placeholder {
+    color: #efefef;
+    opacity: 0;
+    transition: opacity 150ms ease-out;
+  }
+  
+  .search > div > input:focus::placeholder {
+    opacity: 1;
+  }
+  
+  .search > div > input:focus,
+  .search > div > input:not(:placeholder-shown) {
+    width: 250px;
+  }
