New heroku test deployment

--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -4,12 +4,12 @@
     <!--Social Media Icons-->
 
     <a href="https://www.linkedin.com/in/patric-svedberg-02574a9b/" target="_blank" rel="noopener" aria-label="LinkedIn - Opens in a new tab">
-        <img src="{% static '/icons/linkedin-icon.svg' %}" alt="LinkedIn Icon" class="social-icon">
+        <img src="{% static 'icons/linkedin-icon.svg' %}" alt="LinkedIn Icon" class="social-icon">
     </a>
     <a href="https://www.youtube.com/channel/UCtF1FjqOQQdJ7DlDXnpSeXA" target="_blank" rel="noopener" aria-label="Youtube - Opens in a new tab">
-        <img src="{% static '/icons/youtube-icon.svg' %}" alt="Youtube Icon" class="social-icon">
+        <img src="{% static 'icons/youtube-icon.svg' %}" alt="Youtube Icon" class="social-icon">
     </a>
     <a href="https://github.com/PatSvedberg" target="_blank" rel="noopener" aria-label="Github - Opens in a new tab">
-        <img src="{% static '/icons/github-icon.svg' %}" alt="Github Icon" class="social-icon">
+        <img src="{% static 'icons/github-icon.svg' %}" alt="Github Icon" class="social-icon">
     </a>
 </footer>
