Try fix logo for heroku

--- a/templates/includes/header.html
+++ b/templates/includes/header.html
@@ -5,7 +5,7 @@
     <nav id="navbar-top" class="navbar navbar-expand-lg bg-light">
         <div class="container-fluid">
             <!-- Logo -->
-            <a class="navbar-brand" href="{% url 'home' %}">
+            <a class="navbar-brand" href="{% url 'home' %}" target="_self" rel="noopener" aria-label="Back to front page">
                 <img src="{% static 'images/logo.svg' %}" alt="Recipe Republic Logo" class="logo">
             </a>
             <!--Nav bar items-->
