--- a/templates/includes/header.html
+++ b/templates/includes/header.html
@@ -6,7 +6,7 @@
         <div class="container-fluid">
             <!-- Logo -->
             <a class="navbar-brand" href="{% url 'home' %}" target="_self" rel="noopener" aria-label="Back to front page">
-                <img src="{% static 'images/logo.svg' %}" alt="Recipe Republic Logo" class="logo">
+                <img src="{% static 'icons/logo.svg' %}" alt="Recipe Republic Logo" class="logo">
             </a>
             <!--Nav bar items-->
             <div class="collapse navbar-collapse" id="navbarNav">
